objects/Flying_Fridge_Event__e.object
<CustomObject>
    <fields>
        <fullName>door_open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>door_open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <label>serial_no</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temperature__c</fullName>
        <label>temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Flying Fridge events received from commercial refrigerators</description>
    <label>Flying Fridge Event</label>
    <pluralLabel>Flying Fridge Events</pluralLabel>
</CustomObject>